@@ -10,6 +10,13 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20171020:
+AUTHOR: ak@FreeBSD.org
+
+  The USES=fmake has been removed. It was created to help migration from
+  old FreeBSD make (pmake) and there are no more users of it left in
+  the ports tree.
+
 20171012:
 AUTHOR: mat@FreeBSD.org
 
